# fil

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Cargo.toml  PKGBUILD  README.md  SECURITY.md  build.rs  fil.nix  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml
.github/workflows/: package.yml  tests.yml
docs/: coding-standards.md  release.md
src/: main.rs
src/cli/: build.rs  mod.rs  new.rs  test.rs
src/errors/: mod.rs  test.rs
src/fault/: mod.rs
src/new/: mod.rs
tests/: cli.rs
tests/common/: mod.rs
tools/githooks/: pre-commit.sh
tools/nix/: treefmt.nix
tools/package/: control  deb.nix  fil.spec  rpm.nix
